--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="header-navigation">
             <a class="header-logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
             <ul class="header-menu-list">
-                <li class="header-menu-item"><a class="header-menu-link" href="">Studio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
             </ul>
@@ -68,7 +68,7 @@
             </ul>
         </section>
         <section class="team-section">
-            <h2 class="team-title">Our Team</h2>
+            <h2 class="team-title">Our team</h2>
             <ul class="team-list">
                 <li class="team-item">
                     <img class="team-image" src="./images/img1.jpg" alt="Mark Guerrero" width="264" />
@@ -93,7 +93,7 @@
             </ul>
         </section>
         <section class="portfolio-section">
-            <h2 class="portfolio-title">Our Portfolio</h2>
+            <h2 class="portfolio-title">Our portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
                     <img class="portfolio-image" src="./images/Banking.jpg" alt="Mark Guerrero" width="360" />
